[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "machina-organum"
version = "0.0.1"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"}
]
description = "Organon."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
keywords = ["machina-organum"]
dependencies = [
    "pyyaml == 6.0.3"
]

[project.scripts]
machina-organum = "machina_organum.cli:run"

[project.urls]
"Homepage" = "https://github.com/machina-organum/machina-organum"

[dependency-groups]
dev = ["pytest>=8.0.0"]